# Sem8Projects

./: .gitignore  README.md
AOD_proj/: binPacking.py  main.py  multiBinTests.py  singleBinTests.py  tests.py
SOWW/MPI_Prime/: CMakeLists.txt  main.cpp
SOWW/MPI_Prime_non_blocking/: main.cpp
ScripLang/Zad1/: CMakeLists.txt  Test_data_s  main  main.c  resultC  resultPython  zad1.py
ScripLang/Zad2/: .graphs.pyc.swp  SetupT.py  SimpleGraph.c  t.c  test.py
ScripLang/zad2/: CMakeLists.txt  Setup.py  SimpleGraph.c  test.py
ScripLang/zad3/: Calculator.py  Calculator_Test.py  calc-gtk.py  calc-qt.py
ScripLang/zad3/example/graphs/: 1.g6  graphs.py  gv-gtk.py  gv-qt.py
ScripLang/zad4/: db.sqlite3  manage.py
ScripLang/zad4/polls/: admin.py  forms.py  models.py  urls.py  views.py
ScripLang/zad4/polls/migrations/: 0001_initial.py  0002_comment.py  0003_auto_20190602_1657.py  0004_auto_20190606_1819.py  0005_auto_20190606_1830.py
ScripLang/zad4/polls/static/polls/: main.css
ScripLang/zad4/templates/polls/: about.html  base.html  index.html  news.html
ScripLang/zad4/templates/users/: login.html  logout.html  register.html
ScripLang/zad4/users/: views.py
ScripLang/zad4/zad4/: settings.py  urls.py  wsgi.py
